Add ImprovedTextArea.qml and VimHandler
- The TextEditor textArea has moved to its own file 'ImprovedTextAre'
- vimHandler.h/cpp is added, this object will handle key event and
  response accordingly when Vim mode is On.

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -73,6 +73,7 @@
         <file>contents/ui/sideBar/TreeView.qml</file>
 
         <file>contents/ui/textEditor/components/CheatSheetEntry.qml</file>
+        <file>contents/ui/textEditor/components/ImprovedTextArea.qml</file>
         <file>contents/ui/textEditor/components/NotesMapEntry.qml</file>
         <file>contents/ui/textEditor/BottomToolBar.qml</file>
         <file>contents/ui/textEditor/CheatSheet.qml</file>
