--- a/src/contents/resources/style/Style7.css
+++ b/src/contents/resources/style/Style7.css
@@ -1,3 +1,6 @@
+/* SPDX-License-Identifier: BSD-3-Clause */
+/* SPDX-FileCopyrightText: 2023 Louis Schul <schul9louis@gmail.com> */
+
 :root {
     --bodyColor: ;
     --font: ;
