--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -44,6 +44,7 @@
 
         <file>contents/ui/painting/ColorBar.qml</file>
         <file>contents/ui/painting/ColorButton.qml</file>
+        <file>contents/ui/painting/DrawingToolBar.qml</file>
 
         <file>contents/ui/settings/components/ClickableArrow.qml</file>
         <file>contents/ui/settings/components/ClickableIcon.qml</file>
