Simplify note preview in Settings
This simplifies the preview of notes in the settings
to show only the important parts affected by the theme.

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -83,6 +83,7 @@
         <file>contents/ui/todoEditor/ToDoView.qml</file>
 
         <file alias="index.html">contents/resources/index.html</file>
+        <file alias="demo.html">contents/resources/demo.html</file>
         <file alias="qwebchannel.js">contents/resources/qwebchannel.js</file>
 
         <file alias="Avenir.css">contents/resources/style/Avenir.css</file>
