Replace the bottom toolbar inside MainPage
- Replace the bottomToolBar inside MainPage with a unique button to switch between the panes.
- Adds animation when switching panes.

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -64,6 +64,7 @@
         <file>contents/ui/sharedComponents/ActionsList.qml</file>
         <file>contents/ui/sharedComponents/ExpandingFormSwitch.qml</file>
         <file>contents/ui/sharedComponents/KAction.qml</file>
+        <file>contents/ui/sharedComponents/ReversibleButtonDelegate.qml</file>
 
         <file>contents/ui/sideBar/ActionBar.qml</file>
         <file>contents/ui/sideBar/ContextMenu.qml</file>
