--- a/src/contents/resources/style/Style9.css
+++ b/src/contents/resources/style/Style9.css
@@ -169,3 +169,19 @@ sup {
     vertical-align: super;
     line-height: 0;
 }
+
+.klever-copy-button {
+    border: 1px solid var(--textColor);
+    border-radius: 20%;
+    background: var(--bodyColor);
+}
+
+.klever-copy-button > svg {
+    fill: var(--textColor);
+    transition: 0.2s ease-out;
+}
+
+.klever-copy-button:hover > svg {
+    fill: var(--linkColor);
+    transition: 0.2s ease-out;
+}
