Add css style for footnotes

--- a/src/contents/resources/style/Style7.css
+++ b/src/contents/resources/style/Style7.css
@@ -409,6 +409,16 @@ sup {
     line-height: 0;
 }
 
+.footnotes {
+    margin-top: 50px;
+    border-top: 1px solid var(--titleColor);
+    font-size: calc(var(--fontSize) * 0.8);
+}
+
+.footnotes ol {
+    padding-left: 20px;
+}
+
 .klever-copy-button {
     border: 1px solid var(--textColor);
     border-radius: 10%;
