Remove QML file from resources.qrc

--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,93 +1,9 @@
 <!--
     SPDX-License-Identifier: CC0-1.0
-    SPDX-FileCopyrightText: 2022 Louis Schul <schul9louis@gmail.com>
+    SPDX-FileCopyrightText: 2022-2025 Louis Schul <schul9louis@gmail.com>
 -->
 <RCC>
     <qresource prefix="/">
-        <file>contents/ui/main.qml</file>
-
-        <file>contents/ui/dialogs/DeleteConfirmationDialog.qml</file>
-        <file>contents/ui/dialogs/FilePickerDialog.qml</file>
-        <file>contents/ui/dialogs/FileSaverDialog.qml</file>
-        <file>contents/ui/dialogs/FolderPickerDialog.qml</file>
-        <file>contents/ui/dialogs/FontPickerDialog.qml</file>
-        <file>contents/ui/dialogs/ItemPropertiesDialog.qml</file>
-        <file>contents/ui/dialogs/LeavePaintingDialog.qml</file>
-        <file>contents/ui/dialogs/LinkDialog.qml</file>
-        <file>contents/ui/dialogs/LinkNoteDialog.qml</file>
-        <file>contents/ui/dialogs/MoveDialog.qml</file>
-        <file>contents/ui/dialogs/NamingDialog.qml</file>
-        <file>contents/ui/dialogs/NamingErrorDialog.qml</file>
-        <file>contents/ui/dialogs/PrintingDialog.qml</file>
-        <file>contents/ui/dialogs/StorageDialog.qml</file>
-        <file>contents/ui/dialogs/StorageConversionDialog.qml</file>
-        <file>contents/ui/dialogs/TextDialog.qml</file>
-        <file>contents/ui/dialogs/URLDialog.qml</file>
-
-        <file>contents/ui/dialogs/emojiDialog/EmojiDelegate.qml</file>
-        <file>contents/ui/dialogs/emojiDialog/EmojiDialog.qml</file>
-        <file>contents/ui/dialogs/emojiDialog/EmojiGrid.qml</file>
-        <file>contents/ui/dialogs/emojiDialog/EmojiPicker.qml</file>
-        <file>contents/ui/dialogs/emojiDialog/EmojiTonesPicker.qml</file>
-
-        <file>contents/ui/dialogs/imagePickerDialog/ButtonDelegate.qml</file>
-        <file>contents/ui/dialogs/imagePickerDialog/ImagePickerDialog.qml</file>
-
-        <file>contents/ui/dialogs/tableMakerDialog/TableMakerDialog.qml</file>
-        <file>contents/ui/dialogs/tableMakerDialog/UpDownButtonDelegate.qml</file>
-
-        <file>contents/ui/dialogs/todoDialog/TextAreaDelegate.qml</file>
-        <file>contents/ui/dialogs/todoDialog/ToDoDialog.qml</file>
-
-        <file>contents/ui/pages/AboutPage.qml</file>
-        <file>contents/ui/pages/MainPage.qml</file>
-        <file>contents/ui/pages/PaintingPage.qml</file>
-        <file>contents/ui/pages/PrintingPage.qml</file>
-        <file>contents/ui/pages/SettingsPage.qml</file>
-
-        <file>contents/ui/painting/ColorBar.qml</file>
-        <file>contents/ui/painting/ColorButton.qml</file>
-        <file>contents/ui/painting/DrawingToolBar.qml</file>
-        <file>contents/ui/painting/DrawingToolBarOptions.qml</file>
-
-        <file>contents/ui/settings/components/ClickableArrow.qml</file>
-        <file>contents/ui/settings/components/ClickableIcon.qml</file>
-        <file>contents/ui/settings/components/ActionListViewDelegate.qml</file>
-        <file>contents/ui/settings/DisplayPreview.qml</file>
-        <file>contents/ui/settings/EditorHighlightPreview.qml</file>
-        <file>contents/ui/settings/EditorTab.qml</file>
-        <file>contents/ui/settings/FontPicker.qml</file>
-        <file>contents/ui/settings/GeneralTab.qml</file>
-        <file>contents/ui/settings/NotePreviewTab.qml</file>
-        <file>contents/ui/settings/PluginsTab.qml</file>
-        <file>contents/ui/settings/SettingsColorButton.qml</file>
-        <file>contents/ui/settings/TabBar.qml</file>
-
-        <file>contents/ui/sharedComponents/ActionsList.qml</file>
-        <file>contents/ui/sharedComponents/ExpandingFormSwitch.qml</file>
-        <file>contents/ui/sharedComponents/KAction.qml</file>
-        <file>contents/ui/sharedComponents/ReversibleButtonDelegate.qml</file>
-
-        <file>contents/ui/sideBar/ActionBar.qml</file>
-        <file>contents/ui/sideBar/ContextMenu.qml</file>
-        <file>contents/ui/sideBar/SearchBar.qml</file>
-        <file>contents/ui/sideBar/Sidebar.qml</file>
-        <file>contents/ui/sideBar/TreeItem.qml</file>
-        <file>contents/ui/sideBar/TreeView.qml</file>
-
-        <file>contents/ui/textEditor/components/CheatSheetEntry.qml</file>
-        <file>contents/ui/textEditor/components/NotesMapEntry.qml</file>
-        <file>contents/ui/textEditor/BottomToolBar.qml</file>
-        <file>contents/ui/textEditor/CheatSheet.qml</file>
-        <file>contents/ui/textEditor/EditorView.qml</file>
-        <file>contents/ui/textEditor/NotesMap.qml</file>
-        <file>contents/ui/textEditor/TextDisplay.qml</file>
-        <file>contents/ui/textEditor/TextEditor.qml</file>
-        <file>contents/ui/textEditor/TextToolBar.qml</file>
-
-        <file>contents/ui/todoEditor/TodoDelegate.qml</file>
-        <file>contents/ui/todoEditor/ToDoView.qml</file>
-
         <file alias="index.html">contents/resources/index.html</file>
         <file alias="demo.html">contents/resources/demo.html</file>
         <file alias="qwebchannel.js">contents/resources/qwebchannel.js</file>
